--- a/KeePassLib/KeePassLib.csproj
+++ b/KeePassLib/KeePassLib.csproj
@@ -104,9 +104,7 @@
     <Compile Include="Serialization\FileLock.cs" />
     <Compile Include="Serialization\FileTransactionEx.cs" />
     <Compile Include="Serialization\HashedBlockStream.cs" />
-    <Compile Include="Serialization\IOConnection.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Serialization\IOConnection.cs" />
     <Compile Include="Serialization\IocProperties.cs" />
     <Compile Include="Serialization\IocPropertyInfo.cs" />
     <Compile Include="Serialization\IocPropertyInfoPool.cs" />
